fix home horizontal overflow

--- a/app/globals.css
+++ b/app/globals.css
@@ -300,3 +300,19 @@ body {
   margin-left: auto;
   margin-right: auto;
 }
+
+html,
+body {
+  width: 100%;
+  max-width: 100%;
+  overflow-x: hidden !important;
+}
+
+#__next,
+main {
+  max-width: 100%;
+}
+
+* {
+  box-sizing: border-box;
+}
